GPLIM-5067 Adding new build support.